feat(crear-cliente) vista formulario Crear Angular Reactive Form enrutamiento crear-cliente

--- a/ClienteFrontend/src/app/crear-cliente/crear-cliente.component.html
+++ b/ClienteFrontend/src/app/crear-cliente/crear-cliente.component.html
@@ -1,1 +1,24 @@
-<p>crear-cliente works!</p>
+<mat-card>
+
+    <span>Crear nuevo cliente</span>
+    <form [formGroup] = "clienteForm" (ngSubmit) = "onSubmit()">
+
+        <mat-form-field class="crear-cliente-field">
+            <input matInput placeholder="Nombres del Cliente" formControlName = "nombres"/>
+        </mat-form-field>
+        <mat-form-field class="crear-cliente-field">
+            <input matInput placeholder="Apellidos del Cliente" formControlName = "apellidos"/>
+        </mat-form-field>
+        <mat-form-field class="crear-cliente-field">
+            <input matInput placeholder="Direccion del Cliente" formControlName = "direccion"/>
+        </mat-form-field>
+        <mat-form-field class="crear-cliente-field">
+            <input matInput placeholder="Telefono del Cliente" formControlName = "telefono"/>
+        </mat-form-field>
+
+        <button mat-raised-button [disabled] = "!clienteForm.valid" >
+            Crear Nuevo
+        </button>
+    </form>
+
+</mat-card>
