feat(app): footer y header Diseñar Header, Footer y agregarlos al menú

--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<mat-toolbar color = "primary">
+    <button mat-button routerLink = "/">App</button>
+    <button mat-button routerLink = '/clientes'>Clientes</button>
+    <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
+</mat-toolbar>
