--- a/ClienteFrontend/src/app/clientes/clientes.component.html
+++ b/ClienteFrontend/src/app/clientes/clientes.component.html
@@ -14,7 +14,16 @@
       <th mat-header-cell *matHeaderCellDef> Direccion </th>
       <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
     </ng-container>
-  
+
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+      <td mat-cell *matCellDef="let element">
+        <button (click)="actualizarCliente(element)" mat-raised-button color="primary">
+          <b>Editar</b>
+        </button>
+      </td>
+    </ng-container>
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     
