--- a/ClienteFrontend/src/app/actualizar-cliente/actualizar-cliente.component.html
+++ b/ClienteFrontend/src/app/actualizar-cliente/actualizar-cliente.component.html
@@ -1,1 +1,24 @@
-<p>actualizar-cliente works!</p>
+<h2 mat-dialog-title>Actualizar cliente</h2>
+
+<mat-dialog-content [formGroup]="form">
+    <mat-form-field class="crear-cliente-field">
+        <input matInput placeholder="Nombres del Cliente" formControlName = "nombres"/>
+    </mat-form-field>
+    <br/>
+    <mat-form-field class="crear-cliente-field">
+        <input matInput placeholder="Apellidos del Cliente" formControlName = "apellidos"/>
+    </mat-form-field>
+    <br/>
+    <mat-form-field class="crear-cliente-field">
+        <input matInput placeholder="Direccion del Cliente" formControlName = "direccion"/>
+    </mat-form-field>
+    <br/>
+    <mat-form-field class="crear-cliente-field">
+        <input matInput placeholder="Telefono del Cliente" formControlName = "telefono"/>
+    </mat-form-field>
+</mat-dialog-content>
+
+<mat-dialog-actions>
+    <button mat-raised-button (click)="cerrar()">Cerrar</button>
+    <button mat-raised-button color="primary" (click)="guardar()">Guardar</button>
+</mat-dialog-actions>
