--- a/ClienteFrontend/src/app/clientes/clientes.component.html
+++ b/ClienteFrontend/src/app/clientes/clientes.component.html
@@ -11,8 +11,13 @@
     </ng-container>
   
     <ng-container matColumnDef="direccion">
-      <th mat-header-cell *matHeaderCellDef> Direccion </th>
+      <th mat-header-cell *matHeaderCellDef> Dirección </th>
       <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="telefono">
+      <th mat-header-cell *matHeaderCellDef> Teléfono </th>
+      <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
     </ng-container>
 
     <ng-container matColumnDef="acciones">
