style(delete-cliente): Diseñar vista de Confirmación agregar al card los datos a eliminar

--- a/ClienteFrontend/src/app/delete-cliente/delete-cliente.component.html
+++ b/ClienteFrontend/src/app/delete-cliente/delete-cliente.component.html
@@ -1,1 +1,31 @@
-<p>delete-cliente works!</p>
+<mat-card>
+
+    <mat-card-header>
+        <mat-card-title>
+            ¿Está seguro que desa eliminar este cliente?
+        </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+        <mat-list-item>
+            <b>Nombres: {{cliente.nombres}}</b>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item>
+            <b>Apellidos: {{cliente.apellidos}}</b>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item>
+            <b>Dirección: {{cliente.direccion}}</b>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item>
+            <b>Teléfono: {{cliente.telefono}}</b>
+        </mat-list-item>
+    </mat-card-content>
+
+    <mat-card-actions>
+        <button mat-flat-button (click)="cancel()">Cancelar</button>
+        <button mat-raised-button color="warn" (click)="confirmar()">Confirmar</button>
+    </mat-card-actions>
+</mat-card>
