feat(register): formulario register estilo para el componente boton para el header cambio de tema design

--- a/ClienteFrontend/src/app/register/register.component.html
+++ b/ClienteFrontend/src/app/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>
+            Crear nueva cuenta de usuario
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <form [formGroup]="registerForm">
+            <br/>
+            <mat-form-field>
+                <mat-label>Nombre de usuario</mat-label>
+                <input matInput placeholder="Nombre de usuario" formControlName="userName">
+            </mat-form-field>
+            <br/>
+            <mat-form-field>
+                <mat-label>Password</mat-label>
+                <input matInput placeholder="Password" formControlName="password">
+            </mat-form-field>
+            <br/>
+            <div class="new-form-btn">
+                <button mat-raised-button color="primary" [disabled]="!registerForm.valid">Registrarse</button>
+            </div>
+        </form>
+    </mat-card-content>
+</mat-card>
