--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -2,4 +2,6 @@
     <button mat-button routerLink = "/">App</button>
     <button mat-button routerLink = '/clientes'>Clientes</button>
     <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
+    <span style="flex:auto"></span>
+    <button mat-button routerLink="/register">Registrarse</button>
 </mat-toolbar>
