--- a/ClienteFrontend/src/app/register/register.component.html
+++ b/ClienteFrontend/src/app/register/register.component.html
@@ -5,7 +5,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <form [formGroup]="registerForm">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <br/>
             <mat-form-field>
                 <mat-label>Nombre de usuario</mat-label>
@@ -14,7 +14,7 @@
             <br/>
             <mat-form-field>
                 <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password">
+                <input matInput placeholder="Password" formControlName="password" type="password">
             </mat-form-field>
             <br/>
             <div class="new-form-btn">
