feat(header): mostrar usuario Mensaje de bienvenida al usuario utilizando los datos del localStorage

--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -3,5 +3,6 @@
     <button mat-button routerLink = '/clientes'>Clientes</button>
     <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
     <span style="flex:auto"></span>
+    <button mat-button *ngIf="auth.isAutenticado">Bienvenido {{auth.getUsername}}</button>
     <button mat-button routerLink="/register">Registrarse</button>
 </mat-toolbar>
