feat(header): logout de usuario se agrega boton y funcionalidad

--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -4,5 +4,6 @@
     <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
     <span style="flex:auto"></span>
     <button mat-button *ngIf="auth.isAutenticado">Bienvenido {{auth.getUsername}}</button>
-    <button mat-button routerLink="/register">Registrarse</button>
+    <button mat-button *ngIf="auth.isAutenticado" (click)="auth.logout()">Logout</button>
+    <button mat-button *ngIf="!auth.isAutenticado" routerLink="/register">Registrarse</button>
 </mat-toolbar>
