--- a/ClienteFrontend/src/app/login/login.component.html
+++ b/ClienteFrontend/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Login</mat-card-title>
+    </mat-card-header>
+    <br>
+    <mat-card-content>
+        <mat-form-field>
+            <input matInput placeholder="Nombre de Usuario" [(ngModel)]="loginData.userName">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+            <input matInput placeholder="Password" [(ngModel)]="loginData.password" type="password">
+        </mat-form-field>
+        <br>
+        <div class="new-form-btn">
+            <button mat-raised-button color="primary" (click)="login()">Entrar</button>
+        </div>
+    </mat-card-content>
+</mat-card>
