fix(app): Style+funciones+router

--- a/ClienteFrontend/src/app/clientes/clientes.component.html
+++ b/ClienteFrontend/src/app/clientes/clientes.component.html
@@ -26,7 +26,7 @@
         <button (click)="actualizarCliente(element)" mat-raised-button color="primary">
           <b>Editar</b>
         </button>
-        <button [routerLink]="['delete-cliente', element.id]" mat-raised-button color="warn">
+        <button [routerLink]="['/delete-cliente', element.id]" mat-raised-button color="warn">
           <b>Eliminar</b>
         </button>
       </td>
