--- a/ClienteFrontend/src/app/delete-cliente/delete-cliente.component.css
+++ b/ClienteFrontend/src/app/delete-cliente/delete-cliente.component.css
@@ -3,5 +3,5 @@ mat-card{
     margin-left: 40%;
     margin-right: 40%;
     margin-bottom: 10%;
-    background-color: grey;
+    background-color: rgb(237, 237, 237);
 }
