--- a/ClienteFrontend/src/app/login/login.component.html
+++ b/ClienteFrontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Login</mat-card-title>
+        <mat-card-title>Ingresa los datos</mat-card-title>
     </mat-card-header>
     <br>
     <mat-card-content>
@@ -13,7 +13,7 @@
         </mat-form-field>
         <br>
         <div class="new-form-btn">
-            <button mat-raised-button color="primary" (click)="login()">Entrar</button>
+            <button mat-raised-button color="primary" (click)="login()">Acceder</button>
         </div>
     </mat-card-content>
 </mat-card>
