--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
     <span style="flex:auto"></span>
     <button mat-button *ngIf="auth.isAutenticado">Bienvenido {{auth.getUsername}}</button>
-    <button mat-button *ngIf="auth.isAutenticado" (click)="auth.logout()">Logout</button>
+    <button mat-button *ngIf="auth.isAutenticado" (click)="auth.logout()" routerLink="/login">Logout</button>
     <button mat-button *ngIf="!auth.isAutenticado" routerLink="/register">Registrarse</button>
     <button mat-button *ngIf="!auth.isAutenticado" routerLink="/login">Login</button>
 </mat-toolbar>
