feat(cliente): filtro para la tabla

--- a/ClienteFrontend/src/app/header/header.component.html
+++ b/ClienteFrontend/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color = "primary">
     <button mat-button routerLink = "/">App</button>
     <button mat-button routerLink = '/clientes'>Clientes</button>
-    <button mat-button routerLink = '/crear-cliente'>Nuevo cliente</button>
+    <button mat-button *ngIf="auth.isAutenticado" routerLink = '/crear-cliente'>Nuevo cliente</button>
     <span style="flex:auto"></span>
     <button mat-button *ngIf="auth.isAutenticado">Bienvenido {{auth.getUsername}}</button>
     <button mat-button *ngIf="auth.isAutenticado" (click)="auth.logout()" routerLink="/login">Logout</button>
