--- a/ClienteFrontend/src/app/clientes/clientes.component.html
+++ b/ClienteFrontend/src/app/clientes/clientes.component.html
@@ -1,3 +1,7 @@
+<mat-form-field [hidden]="!dataSource" style="padding-top: 10px">
+  <input matInput (keyup)="aplicarFiltro($event)" placeholder="Filtro" autocomplete="off">
+</mat-form-field>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="nombres">
